feature: config sass and img

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>test 页面</title>
   </head>
   <body>
-    <script>
+    <div class="xeditor">
+
+    </div>
+    <!-- <script>
     var xEditor = new window.$xEditor({id: 123})
     document.write(xEditor.name + '<br /> 正常运行');
-    </script>
+    </script> -->
   </body>
 </html>
