--- a/index.html
+++ b/index.html
@@ -18,68 +18,71 @@
     <!-- <div class="xe-menu">
       <div class="xe-menu-area">
         <a href="javascript:void('粘贴');" title="粘贴" class="xe-menu-link">
-          <i class="xe-icon xe-icon-p"></i>
+          <i class="xe-icon xe-icon-paste"></i>
         </a>
         <a href="javascript:void('粘贴为无格式文本');" title="粘贴为无格式文本" class="xe-menu-link">
-          <i class="xe-icon xe-icon-p-t"></i>
+          <i class="xe-icon xe-icon-paste-plainpaste"></i>
         </a>
         <a href="javascript:void('从 MS Word 粘贴');" title="从 MS Word 粘贴" class="xe-menu-link">
-          <i class="xe-icon xe-icon-p-w"></i>
+          <i class="xe-icon xe-icon-paste-wordpaste"></i>
         </a>
       </div>
       <div class="xe-menu-area">
         <a href="javascript:void('加粗');" title="加粗" class="xe-menu-link">
-          <i class="xe-icon xe-icon-b"></i>
+          <i class="xe-icon xe-icon-bold"></i>
         </a>
         <a href="javascript:void('倾斜');" title="倾斜" class="xe-menu-link">
-          <i class="xe-icon xe-icon-i"></i>
+          <i class="xe-icon xe-icon-italic"></i>
         </a>
         <a href="javascript:void('下划线');" title="下划线" class="xe-menu-link">
-          <i class="xe-icon xe-icon-u"></i>
+          <i class="xe-icon xe-icon-underline"></i>
         </a>
       </div>
       <div class="xe-menu-area">
         <a href="javascript:void('文本颜色');" title="文本颜色" class="xe-menu-link">
-          <i class="xe-icon xe-icon-c"></i>
+          <i class="xe-icon xe-icon-color"></i>
         </a>
         <a href="javascript:void('背景颜色');" title="背景颜色" class="xe-menu-link">
-          <i class="xe-icon xe-icon-bg"></i>
+          <i class="xe-icon xe-icon-background"></i>
         </a>
       </div>
       <div class="xe-menu-area">
         <a class="xe-menu-link" href="javascript:void('两端对齐');" title="两端对齐">
-          <i class="xe-icon xe-icon-a"></i>
+          <i class="xe-icon xe-icon-justify"></i>
         </a>
         <a href="javascript:void('左对齐');" title="左对齐" class="xe-menu-link">
-          <i class="xe-icon xe-icon-a-l"></i>
+          <i class="xe-icon xe-icon-justify-l"></i>
         </a>
         <a href="javascript:void('居中');" title="居中" class="xe-menu-link">
-          <i class="xe-icon xe-icon-a-c"></i>
+          <i class="xe-icon xe-icon-justify-c"></i>
         </a>
         <a href="javascript:void('右对齐');" title="右对齐" class="xe-menu-link">
-          <i class="xe-icon xe-icon-a-r"></i>
+          <i class="xe-icon xe-icon-justify-r"></i>
         </a>
       </div>
       <div class="xe-menu-area">
         <a href="javascript:void('插入图像');" title="插入图像" class="xe-menu-link">
-          <i class="xe-icon xe-icon-img"></i>
+          <i class="xe-icon xe-icon-image"></i>
         </a>
         <a href="javascript:void('插入媒体');" title="插入媒体" class="xe-menu-link">
-          <i class="xe-icon xe-icon-m"></i>
+          <i class="xe-icon xe-icon-video"></i>
         </a>
         <a href="javascript:void('表格');" title="表格" class="xe-menu-link">
-          <i class="xe-icon xe-icon-t"></i>
+          <i class="xe-icon xe-icon-table"></i>
         </a>
         <a href="javascript:void('插入水平线');" title="插入水平线" class="xe-menu-link">
-          <i class="xe-icon xe-icon-l"></i>
+          <i class="xe-icon xe-icon-line"></i>
+        </a>
+        <a href="javascript:void('链接');" title="源代码" class="xe-menu-link">
+          <i class="xe-icon xe-icon-link"></i>
         </a>
       </div>
       <div class="xe-menu-area">
         <a href="javascript:void('源代码');" title="源代码" class="xe-menu-link">
-          <i class="xe-icon xe-icon-s"></i>
+          <i class="xe-icon xe-icon-code"></i>
         </a>
         <a href="javascript:void('全屏');" title="全屏" class="xe-menu-link">
-          <i class="xe-icon xe-icon-q"></i>
+          <i class="xe-icon xe-icon-full"></i>
         </a>
       </div>
     </div>
