fix: Restructure bold and fix className

--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
       </div>
       <div class="xe-menu-area">
         <a href="javascript:void('文本颜色');" title="文本颜色" class="xe-menu-link">
-          <i class="xe-icon xe-icon-color"></i>
+          <i class="xe-icon xe-icon-forecolor"></i>
         </a>
         <a href="javascript:void('背景颜色');" title="背景颜色" class="xe-menu-link">
-          <i class="xe-icon xe-icon-background"></i>
+          <i class="xe-icon xe-icon-backcolor"></i>
         </a>
       </div>
       <div class="xe-menu-area">
         <a class="xe-menu-link" href="javascript:void('两端对齐');" title="两端对齐">
-          <i class="xe-icon xe-icon-justify"></i>
+          <i class="xe-icon xe-icon-justifyfull"></i>
         </a>
         <a href="javascript:void('左对齐');" title="左对齐" class="xe-menu-link">
-          <i class="xe-icon xe-icon-justify-l"></i>
+          <i class="xe-icon xe-icon-justifyleft"></i>
         </a>
         <a href="javascript:void('居中');" title="居中" class="xe-menu-link">
-          <i class="xe-icon xe-icon-justify-c"></i>
+          <i class="xe-icon xe-icon-justifycenter"></i>
         </a>
         <a href="javascript:void('右对齐');" title="右对齐" class="xe-menu-link">
-          <i class="xe-icon xe-icon-justify-r"></i>
+          <i class="xe-icon xe-icon-justifyright"></i>
         </a>
       </div>
       <div class="xe-menu-area">
@@ -71,7 +71,7 @@
           <i class="xe-icon xe-icon-table"></i>
         </a>
         <a href="javascript:void('插入水平线');" title="插入水平线" class="xe-menu-link">
-          <i class="xe-icon xe-icon-line"></i>
+          <i class="xe-icon xe-icon-inserthorizontalrule"></i>
         </a>
         <a href="javascript:void('链接');" title="源代码" class="xe-menu-link">
           <i class="xe-icon xe-icon-link"></i>
