feature: add italic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <script>
     var xEditor = new window.$xEditor('#xe')
     xEditor.config({
-      menus: ['bold']
+      menus: [
+        'bold',
+        'italic',
+      ]
     });
     xEditor.create();
     // var xEditor = new window.$xEditor({id: 123})
