--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         'italic',
         'justifycenter',
         'justifyfull',
+        'justifyleft',
       ]
     });
     xEditor.create();
