feature: add justifyright

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         'justifycenter',
         'justifyfull',
         'justifyleft',
+        'justifyright',
       ]
     });
     xEditor.create();
