--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         'justifyfull',
         'justifyleft',
         'justifyright',
+        'inserthorizontalrule',
       ]
     });
     xEditor.create();
