--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       menus: [
         'bold',
         'italic',
+        'underline',
         'justifycenter',
         'justifyfull',
         'justifyleft',
