feature: image dialog style

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </script> -->
     <div class="xe">
       <div class="xe-menu">
-        <a href="javascript:void('粘贴');" title="粘贴" class="xe-menu-link">
-          <i class="xe-icon xe-icon-paste"></i>
+        <a href="javascript:void('插入图像');" title="插入图像" class="xe-menu-link">
+          <i class="xe-icon xe-icon-image"></i>
         </a>
       </div>
       <div class="xe-text-wrap">
@@ -42,9 +42,16 @@
           <a href="javascript:;" class="xe-dialog-title">图片</a>
         </div>
         <div class="xe-dialog-box">
-          <div class="xe-dialog-content">
-            1
+          <div class="xe-dialog-content-url">
+            <input type="text" class="xe-input xe-dialog-url" placeholder="图片链接">
+            <div class="xe-dialog-btn-box">
+              <button class="xe-button xe-dialog-btn">插入</button>
+            </div>
           </div>
+          <!-- <div class="xe-dialog-content-upload">
+            <i class="xe-dialog-upload">+</i>
+            <input class="xe-dialog-file" type="file">
+          </div> -->
         </div>
       </div>
     </div>
