feature: image upload and set url

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>xEditor 页面</title>
   </head>
   <body>
-    <!-- <div id="xe" class="xe"></div> -->
-    <!-- <script>
+    <div id="xe" class="xe"></div>
+    <script>
     var xEditor = new window.$xEditor('#xe')
     xEditor.config({
       menus: [
@@ -18,13 +18,14 @@
         'justifyleft',
         'justifyright',
         'inserthorizontalrule',
+        'image',
       ]
     });
     xEditor.create();
     // var xEditor = new window.$xEditor({id: 123})
     // document.write(xEditor.name + '<br /> 正常运行');
-    </script> -->
-    <div class="xe">
+    </script>
+    <!-- <div class="xe">
       <div class="xe-menu">
         <a href="javascript:void('插入图像');" title="插入图像" class="xe-menu-link">
           <i class="xe-icon xe-icon-image"></i>
@@ -48,13 +49,13 @@
               <button class="xe-button xe-dialog-btn">插入</button>
             </div>
           </div>
-          <!-- <div class="xe-dialog-content-upload">
+          <div class="xe-dialog-content-upload">
             <i class="xe-dialog-upload">+</i>
             <input class="xe-dialog-file" type="file">
-          </div> -->
+          </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="xe">
       <div class="xe-menu">
         <a href="javascript:void('粘贴');" title="粘贴" class="xe-menu-link">
