feature: select style

--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         <a href="javascript:void('插入图像');" title="插入图像" class="xe-menu-link">
           <i class="xe-icon xe-icon-image"></i>
         </a>
+        <div class="xe-select">
+          <a href="javascript:void('插入图像');" title="插入图像" class="xe-select-btn">
+            <span class="xe-select-btn-font">字体</span>
+            <i class="xe-select-btn-arrow"></i>
+          </a>
+          <ul class="xe-select-list">
+            <li class="xe-select-list-item">字体字体字体字体字体字体字体字体字体字体字体字体</li>
+            <li class="xe-select-list-item">22</li>
+            <li class="xe-select-list-item">22</li>
+            <li class="xe-select-list-item">22</li>
+            <li class="xe-select-list-item">22</li>
+            <li class="xe-select-list-item">22</li>
+          </ul>
+        </div>
       </div>
       <div class="xe-text-wrap">
         <div contenteditable="true" class="xe-text"></div>
