--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         'justifyright',
         'inserthorizontalrule',
         'image',
+        'fontname',
       ]
     });
     xEditor.create();
