--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         'inserthorizontalrule',
         'image',
         'fontname',
+        'fontsize',
       ]
     });
     xEditor.create();
