--- a/index.html
+++ b/index.html
@@ -52,8 +52,50 @@
       <div class="xe-text-wrap">
         <div contenteditable="true" class="xe-text"></div>
       </div>
-      <!-- 图片修改 -->
+      <!-- 颜色 -->
       <div class="xe-dialog">
+        <a href="javascript:;" class="xe-dialog-close-btn">
+          <i class="xe-dialog-close"></i>
+        </a>
+        <div class="xe-dialog-header">
+          <a href="javascript:;" class="xe-dialog-title xe-dialog-title-active">颜色</a>
+        </div>
+        <div class="xe-dialog-color-box">
+          <div class="xe-dialog-color" style="background-color: rgb(78, 42, 176);">
+            <div class="xe-dialog-color-inner"></div>
+          </div>
+          <div class="xe-dialog-color-hue">
+            <div class="xe-dialog-color-hue-move">
+              <i class="xe-dialog-color-hue-left"></i>
+              <i class="xe-dialog-color-hue-right"></i>
+            </div>
+          </div>
+          <div class="xe-dialog-color-handle">
+            <div class="xe-dialog-color-show-color">
+              <div class="xe-dialog-color-new-color" style="background: rgb(0, 255, 0);"></div>
+              <div class="xe-dialog-color-current-color" style="background: rgb(0, 255, 0);"></div>
+            </div>
+            <div class="xe-dialog-color-field">
+              <p class="xe-dialog-color-title">R</p>
+              <input type="tel" maxlength="3" size="3" class="xe-dialog-color-inp">
+            </div>
+            <div class="xe-dialog-color-field">
+              <p class="xe-dialog-color-title">G</p>
+              <input type="tel" maxlength="3" size="3" class="xe-dialog-color-inp">
+            </div> <div class="xe-dialog-color-field">
+              <p class="xe-dialog-color-title">B</p>
+              <input type="tel" maxlength="3" size="3" class="xe-dialog-color-inp">
+            </div>
+            <div class="xe-dialog-color-field">
+              <p class="xe-dialog-color-title">#</p>
+              <input type="tel" maxlength="6" size="6" class="xe-dialog-color-inp">
+            </div>
+            <a class="xe-dialog-color-sub my-sub" href="javascript:;">确定</a>
+          </div>
+        </div>
+      </div>
+      <!-- 图片修改 -->
+      <!-- <div class="xe-dialog">
         <a href="javascript:;" class="xe-dialog-close-btn">
           <i class="xe-dialog-close"></i>
         </a>
@@ -71,7 +113,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- 图片上传 -->
       <!-- <div class="xe-dialog">
         <a href="javascript:;" class="xe-dialog-close-btn">
