feature: add backcolor and colorbase

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         'fontsize',
         'code',
         'full',
+        'backcolor'
       ]
     });
     xEditor.create();
@@ -82,7 +83,8 @@
             <div class="xe-dialog-color-field">
               <p class="xe-dialog-color-title">G</p>
               <input type="tel" maxlength="3" size="3" class="xe-dialog-color-inp">
-            </div> <div class="xe-dialog-color-field">
+            </div>
+            <div class="xe-dialog-color-field">
               <p class="xe-dialog-color-title">B</p>
               <input type="tel" maxlength="3" size="3" class="xe-dialog-color-inp">
             </div>
