--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         'fontsize',
         'code',
         'full',
-        'backcolor'
+        'backcolor',
+        'forecolor'
       ]
     });
     xEditor.create();
