--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         'code',
         'full',
         'backcolor',
-        'forecolor'
+        'forecolor',
+        'video'
       ]
     });
     xEditor.create();
