--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         'full',
         'backcolor',
         'forecolor',
-        'video'
+        'video',
+        'table'
       ]
     });
     xEditor.create();
