feature: link menu

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         'backcolor',
         'forecolor',
         'video',
-        'table'
+        'table',
+        'link'
       ]
     });
     xEditor.create();
