feature: cut menu

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         'forecolor',
         'video',
         'table',
-        'link'
+        'link',
+        'cut'
       ]
     });
     xEditor.create();
