feature: copy menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         'video',
         'table',
         'link',
-        'cut'
+        'cut',
+        'copy'
       ]
     });
     xEditor.create();
