feature: paste, plainpaste and wordpaste menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         'table',
         'link',
         'cut',
-        'copy'
+        'copy',
+        'paste',
+        'plainpaste',
+        'wordpaste'
       ]
     });
     xEditor.create();
