feature: drag file to editor

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
           </div>
         </div>
       </div> -->
+      <div class="xe-drag">
+        <p class="xe-drag-text">将文件拖拽到此区域</p>
+      </div>
     </div>
     <!-- <div class="xe">
       <div class="xe-menu">
