fix: index.html demo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>xEditor 页面</title>
   </head>
   <body>
+    <h1>xEditor 测试</h1>
     <div id="xe" class="xe"></div>
     <script>
     var myEditor = new window.xEditor('#xe')
@@ -120,11 +121,11 @@
             <input class="xe-dialog-file" type="file">
           </div>
         </div>
-      </div> -->
+      </div>
       <div class="xe-drag">
         <p class="xe-drag-text">将文件拖拽到此区域</p>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="xe">
       <div class="xe-menu">
         <a href="javascript:void('粘贴');" title="粘贴" class="xe-menu-link">
