--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     myEditor.create();
     </script>
     <div>
-      <p>为什么用？</p>
+      <h2>为什么用？</h2>
       <ul>
         <li>高度可配置</li>
         <li>扁平化的设计</li>
