feat($color): add palette mode

--- a/index.html
+++ b/index.html
@@ -38,7 +38,62 @@
       <div class="xe-text-wrap">
         <div contenteditable="true" class="xe-text"></div>
       </div>
-      <div class="xe-dialog">
+      <div class="xe-palette" style="width: 190px">
+        <div class="xe-palette-header">
+          <div class="xe-palette-preview"></div>
+          <a class="xe-palette-clear" href="javascript:;">清空颜色</a>
+        </div>
+        <p class="xe-palette-title">主题色</p>
+        <div class="xe-palette-main">
+          <ul class="xe-palette-list">
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item" style="margin-right: 0;"></li>
+          </ul>
+          <ul class="xe-palette-list">
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item"></li>
+            <li class="xe-palette-item" style="margin-right: 0;"></li>
+          </ul>
+        </div>
+        <p class="xe-palette-title">标准颜色</p>
+        <ul class="xe-palette-standard">
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item"></li>
+          <li class="xe-palette-standard-item" style="margin-right: 0;"></li>
+        </ul>
+        <p class="xe-palette-title">自定义颜色</p>
+        <div class="xe-palette-diy">
+          <div class="xe-palette-diy-box">
+            <span class="xe-palette-diy-icon">#</span>
+            <input type="tel" maxlength="6" size="6" class="xe-palette-diy-input" />
+          </div>
+          <a class="xe-palette-clear" href="javascript:;">确认</a>
+        </div>
+      </div> -->
+      <!-- 颜色拾色器 -->
+      <!-- <div class="xe-dialog">
         <a href="javascript:;" class="xe-dialog-close-btn">
           <i class="xe-dialog-close"></i>
         </a>
