build($npm): update devDependencies

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>xEditor 页面</title>
+    <script src="dist/xeditor.js"></script>
   </head>
   <body>
     <h1>xEditor 测试</h1>
