--- a/src/test.html
+++ b/src/test.html
@@ -1,3 +1,3 @@
 {{x-for="key in list"}}
-<div id="xe-dialog-box{{id}}" class="xe-dialog-box">{{key}}:{{name}}:{{name}}:{{name}}:{{name}}:{{name}}</div>
+<div id="xe-dialog-box{{id}}" class="xe-dialog-box" style="color: red; background: yellow">{{key}}:{{name}}:{{name}}:{{name}}:{{name}}:{{name}}</div>
 {{/x-for}}
